--- a/BankAccount.Web/BankAccount.Web.csproj
+++ b/BankAccount.Web/BankAccount.Web.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BankAccount\BankAccount.csproj" />
+  </ItemGroup>
+
 </Project>
