--- a/BankAccount.Desktop/BankAccount.Desktop.csproj
+++ b/BankAccount.Desktop/BankAccount.Desktop.csproj
@@ -7,4 +7,12 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BankAccount\BankAccount.csproj" />
+  </ItemGroup>
+
 </Project>
