Utilisation d'une abstraction commune pour récupérer les données

--- a/BankAccount.Desktop/BankAccount.Desktop.csproj
+++ b/BankAccount.Desktop/BankAccount.Desktop.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BankAccount.FakeDataProvider\BankAccount.FakeDataProvider.csproj" />
     <ProjectReference Include="..\BankAccount\BankAccount.csproj" />
   </ItemGroup>
 
