--- a/BankAccount.Console/BankAccount.Console.csproj
+++ b/BankAccount.Console/BankAccount.Console.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BankAccount.FakeDataProvider\BankAccount.FakeDataProvider.csproj" />
     <ProjectReference Include="..\BankAccount\BankAccount.csproj" />
   </ItemGroup>
 
