--- a/BankAccount.FakeDataProvider/BankAccount.FakeDataProvider.csproj
+++ b/BankAccount.FakeDataProvider/BankAccount.FakeDataProvider.csproj
@@ -1,13 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BankAccount.FakeDataProvider\BankAccount.FakeDataProvider.csproj" />
     <ProjectReference Include="..\BankAccount\BankAccount.csproj" />
   </ItemGroup>
 
